--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  font-family: "Josefin Sans", sans-serif;
   scroll-behavior: smooth;
   font-weight: 300;
   line-height: 1.6;
