Added react-burger-menu. Added styling to said menu. Setting the menu up

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   font-family: "Josefin Sans", sans-serif;
   scroll-behavior: smooth;
   font-weight: 300;
