--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,12 @@
 // Abstracts
 @import "./abstracts/mixins";
+@import "./abstracts/variables";
 // Base
 @import "./base/base";
 @import "./base/typography";
 // Components
+@import "./components/header";
+@import "./components/slider";
 // Layout
 // Pages
+@import "./pages/primary";
