--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,7 @@
   color: $headerWhite;
   display: grid;
   @include respond(phone) {
+    z-index: 3;
     width: 100vw;
     position: fixed;
     grid-template-columns: 5rem 1fr;
