--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,8 @@
 @import "./components/header";
 @import "./components/slider";
 // Layout
+@import "./layout/contact";
+@import "./layout/creations";
+@import "./layout/home";
+@import "./layout/primary";
 // Pages
-@import "./pages/primary";
