Home page looks completed on phone MQ. Will start on the others next

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,3 +1,14 @@
+@mixin paragraph {
+  color: $headerWhite;
+  text-shadow: 2px 2px black;
+  font-size: 2rem;
+  padding: 1.5rem 3rem;
+  a {
+    text-decoration: underline;
+    color: $headerWhite;
+  }
+}
+
 @mixin respond($breakpoint) {
   @if $breakpoint==phone {
     @media only screen and (max-width: 37.5em) {
