--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   overflow-x: hidden;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Karla", sans-serif;
   scroll-behavior: smooth;
   font-weight: 300;
   line-height: 1.6;
