--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -1,24 +1,25 @@
 .home {
   display: grid;
-  &--greeting {
-    background: url("../images/ssc064.jpg") no-repeat center center / cover;
-  }
+
   @include respond(phone) {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 100vh);
+    grid-template-rows: 135vh 150vh 92vh;
     grid-row: 2 / -1;
     grid-column: 1;
+    font-weight: 700;
     &--greeting {
+      background: url("../images/ssc064banner.jpg") no-repeat center center /
+        cover;
       grid-row: 1;
       grid-column: 1;
-      filter: grayscale(100%);
       h1 {
+        font-size: 2.3rem;
         color: $primaryColor;
         text-align: center;
         background: $headerWhite;
         width: 50%;
         margin: 0 auto;
-        margin-top: 3rem;
+        margin-top: 2rem;
         border-radius: 10rem;
         padding: 5px 0;
         box-shadow: 5px 5px $primaryColor;
@@ -27,6 +28,71 @@
           transition: all 0.3s ease-in-out;
           width: 90%;
         }
+      }
+      p {
+        @include paragraph;
+      }
+    }
+    &--cta {
+      grid-row: 2;
+      grid-column: 1;
+      &__image {
+        margin-top: 1.5rem;
+        img {
+          margin: 0 auto;
+          display: block;
+          width: 90%;
+          height: 75%;
+          justify-self: center;
+        }
+      }
+      h1 {
+        font-size: 2.3rem;
+        color: $headerWhite;
+        text-align: center;
+        background: $primaryColor;
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 2rem;
+        border-radius: 10rem;
+        padding: 5px 0;
+        box-shadow: 5px 5px $headerWhite;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+          transition: all 0.3s ease-in-out;
+          width: 90%;
+        }
+      }
+      p {
+        color: $primaryColor;
+        font-size: 2rem;
+        padding: 1.5rem 3rem;
+      }
+    }
+    &--purchasing {
+      grid-row: 3;
+      grid-column: 1;
+      background: url("../images/ssc041banner.jpg") no-repeat center center /
+        cover;
+      h1 {
+        font-size: 2.3rem;
+        color: $primaryColor;
+        text-align: center;
+        background: $headerWhite;
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 2rem;
+        border-radius: 10rem;
+        padding: 5px 0;
+        box-shadow: 5px 5px $primaryColor;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+          transition: all 0.3s ease-in-out;
+          width: 90%;
+        }
+      }
+      p {
+        @include paragraph;
       }
     }
   }
