Added react-icons for contact page. Will finish up tomorrow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,8 @@
 @import "./components/header";
 @import "./components/slider";
 // Layout
-@import "./layout/contact";
-@import "./layout/creations";
-@import "./layout/home";
 @import "./layout/primary";
 // Pages
+@import "./pages/contact";
+@import "./pages/creations";
+@import "./pages/home";
