--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -5,7 +5,7 @@
   a {
     color: $headerWhite;
   }
-  background: url("../images/ssc064banner.jpg") no-repeat center center / cover;
+  background: url("../static/ssc064banner.jpg") no-repeat center center / cover;
   @include respond(phone) {
     grid-column: 1;
     grid-row: 2;
