--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,6 +2,30 @@
   background: $primaryColor;
   color: $headerWhite;
   display: grid;
+  @include respond(tabPort) {
+    z-index: 3;
+    width: 100vw;
+    position: fixed;
+    grid-template-columns: 5rem 1fr;
+    height: 6vh;
+    grid-row: 1;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    &--link {
+      grid-column: 2;
+      display: inline-block;
+      align-self: center;
+      h1 {
+        padding: 0 0 1rem 0;
+        font-size: 4.5rem;
+      }
+      a {
+        align-self: center;
+        color: $headerWhite;
+      }
+    }
+  }
   @include respond(phone) {
     z-index: 3;
     width: 100vw;
