--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,5 +1,13 @@
 .bm-burger-button {
   display: none;
+  @include respond(tabPort) {
+    display: block;
+    position: fixed;
+    width: 50px;
+    height: 30px;
+    left: 22.5px;
+    top: 22.5px;
+  }
   @include respond(phone) {
     display: block;
     position: fixed;
@@ -15,12 +23,15 @@
 }
 
 .bm-cross-button {
-  position: fixed;
-  width: 25px;
-  height: 15px;
-  left: 18px;
-  top: 18px;
   display: none;
+  @include respond(tabPort) {
+    display: block;
+    position: fixed;
+    width: 50px;
+    height: 30px;
+    left: 22.5px;
+    top: 22.5px;
+  }
   @include respond(phone) {
     display: block;
   }
@@ -37,10 +48,15 @@
 
 .bm-menu {
   background: $primaryColor;
+  display: grid;
+  height: 100vh;
+  @include respond(tabPort) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 8vh repeat(3, 1fr) 2fr;
+    width: 80vw;
+  }
   @include respond(phone) {
-    height: 100vh;
     width: 100%;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 8vh 1fr 2fr;
   }
@@ -56,6 +72,18 @@
   grid-row: 2;
   a {
     color: $headerWhite;
+  }
+  @include respond(tabPort) {
+    padding: 1.5rem;
+    font-size: 6rem;
+    justify-self: center;
+    align-self: center;
+    a {
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
   @include respond(phone) {
     padding: 1.5rem;
