--- a/src/styles/layout/_primary.scss
+++ b/src/styles/layout/_primary.scss
@@ -1,5 +1,12 @@
 .primary {
   display: grid;
+  @include respond(tabPort) {
+    overflow: hidden;
+    grid-template-columns: 1fr;
+    grid-template-rows: 6vh;
+    min-height: 100vh;
+    width: 100vw;
+  }
   @include respond(phone) {
     grid-template-columns: 100vw;
     grid-template-rows: 8vh;
