--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,14 +1,131 @@
 .home {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  // grid-template-rows: repeat(3, 1fr);
+  width: 100vw;
   &--greeting {
     background: url("../static/ssc064banner.jpg") no-repeat center center /
       cover;
     grid-row: 1;
-    grid-column: 1;
+    grid-column: 1 / -1;
+    color: $primaryColor;
+    width: 90%;
+    grid-column: 1 / -1;
+    grid-row: 1;
+    margin: 3rem 0;
+    height: 95%;
+    justify-self: center;
+    transition: all 0.3s ease-out;
+    font-weight: bold;
+    h1 {
+      font-size: 2.3rem;
+      color: $primaryColor;
+      text-align: center;
+      background: $headerWhite;
+      width: 50%;
+      margin: 0 auto;
+      margin-top: 3.5rem;
+      border-radius: 10rem;
+      padding: 5px 0;
+      box-shadow: 5px 5px $primaryColor;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        transition: all 0.3s ease-in-out;
+        width: 90%;
+      }
+    }
+    p {
+      text-shadow: 2px 2px black;
+      padding: 3rem 3rem;
+      color: $headerWhite;
+      font-size: 3rem;
+    }
+  }
+  &--cta {
+    grid-row: 2;
+    grid-column: 1 / -1;
+    color: $primaryColor;
+    width: 90%;
+    margin: 6rem 0 3rem 0;
+    height: 95%;
+    justify-self: center;
+    transition: all 0.3s ease-out;
+    font-weight: bold;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    &__image {
+      grid-column: 1 / -1;
+      justify-self: center;
+      img {
+        justify-self: center;
+        display: block;
+      }
+    }
+    h1 {
+      grid-column: 1 / -1;
+      font-size: 2.3rem;
+      color: $headerWhite;
+      text-align: center;
+      background: $primaryColor;
+      width: 50%;
+      margin: 0 auto;
+      margin-top: 3.5rem;
+      border-radius: 10rem;
+      padding: 5px 0;
+      box-shadow: 5px 5px $headerWhite;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        transition: all 0.3s ease-in-out;
+        width: 90%;
+      }
+    }
+    p {
+      grid-column: 1 / -1;
+      font-size: 3rem;
+      padding: 3rem;
+    }
   }
   &--purchasing {
+    grid-row: 4;
+    justify-self: center;
+    grid-column: 1 / 3;
     background: url("../static/ssc041banner.jpg") no-repeat center center /
       cover;
+    grid-column: 1 / -1;
+    color: $primaryColor;
+    width: 90%;
+    grid-column: 1 / -1;
+    margin: 3rem 0;
+    height: 55vh;
+    justify-self: center;
+    transition: all 0.3s ease-out;
+    font-weight: bold;
+    a {
+      color: $headerWhite;
+    }
+    h1 {
+      font-size: 2.3rem;
+      color: $primaryColor;
+      text-align: center;
+      background: $headerWhite;
+      width: 50%;
+      margin: 0 auto;
+      margin-top: 3.5rem;
+      border-radius: 10rem;
+      padding: 5px 0;
+      box-shadow: 5px 5px $primaryColor;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        transition: all 0.3s ease-in-out;
+        width: 90%;
+      }
+    }
+    p {
+      text-shadow: 2px 2px black;
+      padding: 3rem 3rem;
+      color: $headerWhite;
+      font-size: 3rem;
+    }
   }
   @include respond(tabPort) {
     grid-template-columns: 100vw;
